Added magnitude axis to light curve
Former-commit-id: 8568ad9025355e9c670c4fa08a30baa5115df8a9

--- a/vasca/examples/display_sources.ipynb
+++ b/vasca/examples/display_sources.ipynb
@@ -33,10 +33,10 @@
     "\n",
     "# ------------------  Setup region and plotting paramters  ----------------------\n",
     "\n",
-    "region_name = \"TDS\" #_ELAISN1\n",
+    "region_name = \"TDS_ELAISN1\" #_ELAISN1\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
-    "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\"]\n",
-    "show_map_pars = [\"rg_src_id\",\"ra\",\"dec\",\"pos_err\",\"pos_nxv\",\"nr_det\",\"flux\",\"flux_cpval\", \"nr_fd_srcs\"]\n",
+    "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\"]\n",
+    "show_map_pars = [\"rg_src_id\",\"ra\",\"dec\",\"pos_err\",\"pos_nxv\", \"pos_cpval\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\", \"nr_fd_srcs\"]\n",
     "sort_par = \"rg_src_id\" # \"flux\" #\"rg_src_id\" #\n",
     "only_sel_srcs = True\n",
     "\n",
@@ -60,7 +60,7 @@
    "id": "23df4759-a6cd-462d-8fa6-dcd4c14bd395",
    "metadata": {},
    "source": [
-    "### SHow all info for one source"
+    "### Show all info for one source"
    ]
   },
   {
@@ -72,12 +72,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b44c1ead77104c3f95a93d6067262d39",
+       "model_id": "a62984541f2e423383b4792542dd37a9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(2, 6, 145, 148, 154, 222, 271, 498, 555, 564,…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(1669, 1801, 2815, 3776, 4338, 6137), value=16…"
       ]
      },
      "metadata": {},
@@ -97,7 +97,7 @@
     "    \n",
     "    #Get sky region of source\n",
     "    sky_center = SkyCoord(tc_src.tt_sources[0][\"ra\"]*uu.deg, tc_src.tt_sources[0][\"dec\"]*uu.deg, frame=\"icrs\")\n",
-    "    sky_region_src = CircleSkyRegion(center=sky_center, radius=0.5*uu.arcmin)\n",
+    "    sky_region_src = CircleSkyRegion(center=sky_center, radius=0.3*uu.arcmin)\n",
     "    \n",
     "    #Get field to plot\n",
     "    fd_src = rg.get_field(rg_fd_id=tc_src.tt_fields[0][\"rg_fd_id\"], load_method=\"FITS\", add_field=True)\n",
@@ -105,10 +105,11 @@
     "    #Plot\n",
     "    #plt.cla()\n",
     "    ax_src, wcs_src = vvis.plot_field_sky_map(fd_src, img_idx=-1, sky_region = sky_region_src,fig=fig_src) # \n",
-    "    _ = vvis.plot_sky_sources(tc_src.tt_sources,tt_det=tc_src.tt_detections, sky_region_wcs = (sky_region_src,wcs_src),only_selected=False) #\n",
+    "    _ = vvis.plot_sky_sources(rg.tt_sources,tt_det=rg.tt_detections, sky_region_wcs = (sky_region_src,wcs_src),only_selected=False) #\n",
+    "   # _ = vvis.plot_sky_sources(rg.tt_ref_sources,tt_det=None, sky_region_wcs = (sky_region_src,wcs_src),only_selected=False)\n",
     "    plt.show()\n",
     "    \n",
-    "    fig_lc_src = plt.figure(\"Light curve\",figsize=(8, 6))\n",
+    "    fig_lc_src = plt.figure(\"Light curve\",figsize=(8, 4))\n",
     "    plt.cla()\n",
     "    vvis.plot_light_curve(rg,fig=fig_lc_src, rg_src_ids = rg_src_id)\n",
     "    plt.show()\n",
@@ -117,7 +118,29 @@
     "    display(tc_src.tt_sources[show_map_pars])\n",
     "    display(tc_src.tt_detections)\n",
     "    display(tc_src.tt_fields)\n",
-    "widgets.interactive( plot_sky_src, rg_src_id=tt_srcs[\"rg_src_id\"])"
+    "    \n",
+    "visprob_srcids = [1669,1801,2815,3776,4338,6137,]\n",
+    "\n",
+    "\n",
+    "widgets.interactive( plot_sky_src, rg_src_id=visprob_srcids) #tt_srcs[\"rg_src_id\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf8d88c1-fd2e-49e4-8cff-9903ed8474ab",
+   "metadata": {},
+   "source": [
+    "rg_src_id Ra dec comment\n",
+    "140461 150.2487081420898\t2.2611373601283726  Offset from maximum \n",
+    "143003 150.11600401215506\t2.244982524539299   Source across field \n",
+    "143491 150.0886929944955\t2.244071937913435   One ourlyer \n",
+    "\n",
+    "1669\t242.03737180641812\t54.45854047458777  Offset from image\n",
+    "1801\t241.98778211802238\t54.13409995290732  Nearby source\n",
+    "2815\t241.45411996509637\t54.92288017258464  Looks very wrong, between two sources, flux 212\n",
+    "3776\t245.24663109423406\t55.18655340244798  Only two dets\n",
+    "4338\t245.07276757329817\t55.17424168308725  Bursty, offset, mag17.8\n",
+    "6137\t244.73443811185908\t54.46339958688894  Offset mag 20"
    ]
   },
   {
@@ -137,12 +160,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1b510df0e1d49b387d1f3fd2442bc24",
+       "model_id": "bbdf8f14cb974ad3a31de9e69de0cfdd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=20, description='rg_fd_id', max=41), Output()), _dom_classes=('widget-in…"
+       "interactive(children=(IntSlider(value=3, description='rg_fd_id', max=6), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "metadata": {},
@@ -182,12 +205,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc3b050b88bd4bd8b14795388818c42f",
+       "model_id": "0dd2fe413c9843bfbdda42b5d49464bf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=186, description='block_nr', max=373), Output()), _dom_classes=('widget-…"
+       "interactive(children=(IntSlider(value=29, description='block_nr', max=58), Output()), _dom_classes=('widget-in…"
       ]
      },
      "metadata": {},
@@ -196,13 +219,12 @@
    ],
    "source": [
     "nr_blocks = int(nr_srcs/lc_block_srcs)+1 \n",
-    "flux_ylim = mag2flux([24.5,14.5])/1e-6\n",
     "def plot_lc_range(block_nr):\n",
     "    fig_lc = plt.figure(\"Light curves\",figsize=(10, 9))\n",
     "    plt.cla()\n",
     "    lc_min = lc_block_srcs * block_nr\n",
     "    lc_max = lc_min + lc_block_srcs if lc_min + lc_block_srcs<=nr_srcs-1 else nr_srcs-1\n",
-    "    vvis.plot_light_curve(rg,fig=fig_lc, rg_src_ids = tt_srcs[\"rg_src_id\"][lc_min:lc_max],ylim = flux_ylim.value ) #, \n",
+    "    vvis.plot_light_curve(rg,fig=fig_lc, rg_src_ids = tt_srcs[\"rg_src_id\"][lc_min:lc_max], ylim = [1.2,350])\n",
     "    plt.show()\n",
     "    display(tt_srcs[lc_min:lc_max][show_lc_pars])\n",
     "widgets.interactive( plot_lc_range, block_nr=(0,nr_blocks-1))"
