Improved visualizations and added coadd processing
Former-commit-id: 64df4b233f6abe61a4e4bf9a04b5e758c85b4f6a

--- a/vasca/examples/display_sources.ipynb
+++ b/vasca/examples/display_sources.ipynb
@@ -24,6 +24,7 @@
     "from astropy import units as uu\n",
     "from astropy.coordinates import SkyCoord\n",
     "from astropy.wcs.utils import pixel_to_skycoord\n",
+    "import numpy as np\n",
     "\n",
     "from vasca.region import Region\n",
     "from vasca.field import BaseField\n",
@@ -72,12 +73,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2243eabf35fe4875af4776dcd57fd713",
+       "model_id": "c319ea23834f44d6b30d12cba32ed785",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(1669, 1801, 2815, 3776, 4338, 6137), value=16…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(25, 346, 478, 515, 635, 744, 750, 1038, 1051,…"
       ]
      },
      "metadata": {},
@@ -85,62 +86,78 @@
     }
    ],
    "source": [
-    "def plot_sky_src(rg_src_id=0):\n",
+    "\n",
+    "def plot_sky_src(rg_src_id=0, fd_idx=0, vis_idx = -1):\n",
+    "    \n",
+    "    #Check if src_id exists\n",
     "    if rg_src_id not in tt_srcs[\"rg_src_id\"]:\n",
-    "        print(\"source ID does not exist\") \n",
+    "        print(\"Source ID does not exist\") \n",
     "        return\n",
     "    \n",
-    "    fig_src = plt.figure(\"Sky map source\",figsize=(8, 7))\n",
-    "    plt.cla()\n",
-    "\n",
+    "    #Get source and check id field index out of range\n",
     "    tc_src = rg.get_src_from_id(rg_src_id)\n",
+    "    if fd_idx > len(tc_src.tt_fields)-1:\n",
+    "        print(\"Field index out of range\") \n",
+    "        return\n",
     "    \n",
+    "    #Get field to plot and check if visit index out of range\n",
+    "    rg_fd_id = tc_src.tt_fields[fd_idx][\"rg_fd_id\"]\n",
+    "    fd_src = rg.get_field(rg_fd_id=rg_fd_id, load_method=\"FITS\", add_field=True)\n",
+    "    if vis_idx > len(fd_src.tt_visits)-1:\n",
+    "        print(\"Visit index out of range\") \n",
+    "        return\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    fig_src = plt.figure(\"Sky map source\",figsize=(8, 7))\n",
+    "    #plt.cla()\n",
+    "\n",
     "    #Get sky region of source\n",
     "    sky_center = SkyCoord(tc_src.tt_sources[0][\"ra\"]*uu.deg, tc_src.tt_sources[0][\"dec\"]*uu.deg, frame=\"icrs\")\n",
     "    sky_region_src = CircleSkyRegion(center=sky_center, radius=0.3*uu.arcmin)\n",
-    "    \n",
-    "    #Get field to plot\n",
-    "    fd_src = rg.get_field(rg_fd_id=tc_src.tt_fields[0][\"rg_fd_id\"], load_method=\"FITS\", add_field=True)\n",
-    "    \n",
+    "     \n",
     "    #Plot\n",
-    "    #plt.cla()\n",
-    "    ax_src, wcs_src = vvis.plot_field_sky_map(fd_src, img_idx=-1, sky_region = sky_region_src,fig=fig_src) # \n",
-    "    _ = vvis.plot_sky_sources(rg.tt_sources,tt_det=rg.tt_detections, sky_region_wcs = (sky_region_src,wcs_src),only_selected=False) #\n",
-    "   # _ = vvis.plot_sky_sources(rg.tt_ref_sources,tt_det=None, sky_region_wcs = (sky_region_src,wcs_src),only_selected=False)\n",
+    "    plt.cla()\n",
+    "    ax_src, wcs_src = vvis.plot_field_sky_map(fd_src, img_idx=vis_idx, sky_region = sky_region_src, fig=fig_src) #\n",
+    "    \n",
+    "    #If displaying visits, onle show detections in that visit\n",
+    "    sel_det_rg = np.ones(len(rg.tt_detections), dtype=bool)\n",
+    "    if vis_idx > -1:\n",
+    "        vis_id = fd_src.tt_visits[\"vis_id\"][vis_idx]\n",
+    "        sel_det_rg = rg.tt_detections[\"vis_id\"]==vis_id\n",
+    "        sel_det_fd = fd_src.tt_detections[\"vis_id\"]==vis_id\n",
+    "    \n",
+    "    #Show sources\n",
+    "    plt_ref_src_kwargs = {\"marker\": \"x\",\"markersize\": 10,\"color\":\"yellow\"}\n",
+    "    _ = vvis.plot_sky_sources(rg.tt_sources,tt_det=rg.tt_detections[sel_det_rg], sky_region_wcs = (sky_region_src,wcs_src),only_selected=False) #\n",
+    "    _ = vvis.plot_sky_sources(fd_src.tt_coadd_detections[fd_src.tt_coadd_detections[\"s2n\"]>5.],tt_det=None, sky_region_wcs = (sky_region_src,wcs_src),only_selected=False, src_id=\"mag\", src_kwargs = plt_ref_src_kwargs)\n",
     "    plt.show()\n",
     "    \n",
     "    fig_lc_src = plt.figure(\"Light curve\",figsize=(8, 4))\n",
     "    plt.cla()\n",
-    "    vvis.plot_light_curve(rg,fig=fig_lc_src, rg_src_ids = rg_src_id)\n",
+    "    vvis.plot_light_curve(rg, rg_src_ids = rg_src_id,fig=fig_lc_src) #\n",
     "    plt.show()\n",
     "    \n",
-    "    \n",
     "    display(tc_src.tt_sources[show_map_pars])\n",
-    "    display(tc_src.tt_detections)\n",
+    "    print(\"\\nFields this source was detected in:\")\n",
     "    display(tc_src.tt_fields)\n",
+    "    #display(tc_src.tt_detections)\n",
     "    \n",
-    "visprob_srcids = [1669,1801,2815,3776,4338,6137,]\n",
+    "    #get fd_src_id\n",
+    "    sel_fd_src = (rg.tt_src_id_map[\"rg_src_id\"]==rg_src_id) * (rg.tt_src_id_map[\"rg_fd_id\"]==rg_fd_id)\n",
+    "    fd_src_id = rg.tt_src_id_map[sel_fd_src][\"fd_src_id\"][0]\n",
+    "    print(\"\\nDetections in this field:\")\n",
+    "    display(fd_src.tt_detections[fd_src.tt_detections[\"fd_src_id\"]==fd_src_id])\n",
+    "    \n",
+    "    #display(fd_src.tt_visits)\n",
     "\n",
+    "widgets.interactive( plot_sky_src, rg_src_id=tt_srcs[\"rg_src_id\"],\n",
+    "                    fd_idx=widgets.IntSlider(min=0, max=10, value=0, step=1),\n",
+    "                    vis_idx = widgets.IntSlider(min=-1, max=100, value=-1, step=1)) #visprob_srcids = [1669,1801,2815,3776,4338,6137,]\n",
     "\n",
-    "widgets.interactive( plot_sky_src, rg_src_id=visprob_srcids) #tt_srcs[\"rg_src_id\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bf8d88c1-fd2e-49e4-8cff-9903ed8474ab",
-   "metadata": {},
-   "source": [
-    "rg_src_id Ra dec comment\n",
-    "140461 150.2487081420898\t2.2611373601283726  Offset from maximum \n",
-    "143003 150.11600401215506\t2.244982524539299   Source across field \n",
-    "143491 150.0886929944955\t2.244071937913435   One ourlyer \n",
-    "\n",
-    "1669\t242.03737180641812\t54.45854047458777  Offset from image\n",
-    "1801\t241.98778211802238\t54.13409995290732  Nearby source\n",
-    "2815\t241.45411996509637\t54.92288017258464  Looks very wrong, between two sources, flux 212\n",
-    "3776\t245.24663109423406\t55.18655340244798  Only two dets\n",
-    "4338\t245.07276757329817\t55.17424168308725  Bursty, offset, mag17.8\n",
-    "6137\t244.73443811185908\t54.46339958688894  Offset mag 20"
+    "#controls = widgets.HBox(widget.children[:-1], layout = widgets.Layout(flex_flow='row wrap'))\n",
+    "#output = widget.children[-1]\n",
+    "#display(widgets.VBox([controls, output]))"
    ]
   },
   {
@@ -160,7 +177,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7294a7c6d7ee496b97b0d56031d89287",
+       "model_id": "45e459da067e4cf5b0d085e370353c8e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -205,7 +222,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f080fcc14bd643b5a77f3d432e04b320",
+       "model_id": "1e4c65c421004c03afeb968736008bb7",
        "version_major": 2,
        "version_minor": 0
       },
