--- a/vasca/examples/display_sources.ipynb
+++ b/vasca/examples/display_sources.ipynb
@@ -73,12 +73,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c319ea23834f44d6b30d12cba32ed785",
+       "model_id": "2b2df11935174d75a757cd90535c43c5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(25, 346, 478, 515, 635, 744, 750, 1038, 1051,…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(25, 346, 478, 515, 635, 744, 750, 103…"
       ]
      },
      "metadata": {},
@@ -151,13 +151,13 @@
     "    \n",
     "    #display(fd_src.tt_visits)\n",
     "\n",
-    "widgets.interactive( plot_sky_src, rg_src_id=tt_srcs[\"rg_src_id\"],\n",
+    "widget = widgets.interactive( plot_sky_src, rg_src_id=tt_srcs[\"rg_src_id\"],\n",
     "                    fd_idx=widgets.IntSlider(min=0, max=10, value=0, step=1),\n",
     "                    vis_idx = widgets.IntSlider(min=-1, max=100, value=-1, step=1)) #visprob_srcids = [1669,1801,2815,3776,4338,6137,]\n",
     "\n",
-    "#controls = widgets.HBox(widget.children[:-1], layout = widgets.Layout(flex_flow='row wrap'))\n",
-    "#output = widget.children[-1]\n",
-    "#display(widgets.VBox([controls, output]))"
+    "controls = widgets.HBox(widget.children[:-1], layout = widgets.Layout(flex_flow='row wrap'))\n",
+    "output = widget.children[-1]\n",
+    "display(widgets.VBox([controls, output]))"
    ]
   },
   {
@@ -177,12 +177,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45e459da067e4cf5b0d085e370353c8e",
+       "model_id": "98d6b848eb2a4e94a6166ce4f7002841",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=3, description='rg_fd_id', max=6), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=0, description='rg_fd_id', max=1), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "metadata": {},
@@ -222,12 +222,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e4c65c421004c03afeb968736008bb7",
+       "model_id": "cf6cbeea853443c3a28d9ea84f03703a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=29, description='block_nr', max=58), Output()), _dom_classes=('widget-in…"
+       "interactive(children=(IntSlider(value=8, description='block_nr', max=16), Output()), _dom_classes=('widget-int…"
       ]
      },
      "metadata": {},
