--- a/vasca/examples/display_sources.ipynb
+++ b/vasca/examples/display_sources.ipynb
@@ -39,7 +39,7 @@
     "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\"]\n",
     "show_map_pars = [\"rg_src_id\",\"ra\",\"dec\",\"pos_err\",\"pos_nxv\", \"pos_cpval\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\", \"nr_fd_srcs\"]\n",
     "sort_par = \"rg_src_id\" # \"flux\" #\"rg_src_id\" #\n",
-    "only_sel_srcs = True\n",
+    "only_sel_srcs = False\n",
     "\n",
     "# -------------------------------------------------------------------------------\n",
     "\n",
@@ -73,12 +73,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b2df11935174d75a757cd90535c43c5",
+       "model_id": "f1b76d2f8bee439c9a5b28f97c5a5d1d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(25, 346, 478, 515, 635, 744, 750, 103…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(414, 508, 867, 1192, 1254, 1260, 1334…"
       ]
      },
      "metadata": {},
@@ -130,7 +130,7 @@
     "    #Show sources\n",
     "    plt_ref_src_kwargs = {\"marker\": \"x\",\"markersize\": 10,\"color\":\"yellow\"}\n",
     "    _ = vvis.plot_sky_sources(rg.tt_sources,tt_det=rg.tt_detections[sel_det_rg], sky_region_wcs = (sky_region_src,wcs_src),only_selected=False) #\n",
-    "    _ = vvis.plot_sky_sources(fd_src.tt_coadd_detections[fd_src.tt_coadd_detections[\"s2n\"]>5.],tt_det=None, sky_region_wcs = (sky_region_src,wcs_src),only_selected=False, src_id=\"mag\", src_kwargs = plt_ref_src_kwargs)\n",
+    "    _ = vvis.plot_sky_sources(rg.tt_coadd_sources,tt_det=None, sky_region_wcs = (sky_region_src,wcs_src),only_selected=False, src_id=\"coadd_src_id\", src_kwargs = plt_ref_src_kwargs)\n",
     "    plt.show()\n",
     "    \n",
     "    fig_lc_src = plt.figure(\"Light curve\",figsize=(8, 4))\n",
@@ -139,6 +139,8 @@
     "    plt.show()\n",
     "    \n",
     "    display(tc_src.tt_sources[show_map_pars])\n",
+    "    if \"tt_coadd_sources\" in tc_src._table_names:\n",
+    "        display(tc_src.tt_coadd_sources[\"coadd_src_id\",\"flux\",\"flux_err\",\"mag\",\"nr_det\"])\n",
     "    print(\"\\nFields this source was detected in:\")\n",
     "    display(tc_src.tt_fields)\n",
     "    #display(tc_src.tt_detections)\n",
@@ -149,11 +151,12 @@
     "    print(\"\\nDetections in this field:\")\n",
     "    display(fd_src.tt_detections[fd_src.tt_detections[\"fd_src_id\"]==fd_src_id])\n",
     "    \n",
-    "    #display(fd_src.tt_visits)\n",
     "\n",
-    "widget = widgets.interactive( plot_sky_src, rg_src_id=tt_srcs[\"rg_src_id\"],\n",
+    "srcs_assoc = [414,508,867,1192,1254,1260,1334,1916,2050,3576,3721,3836,4307,4854,5561,5702,6772]   \n",
+    "    \n",
+    "widget = widgets.interactive( plot_sky_src, rg_src_id=srcs_assoc,\n",
     "                    fd_idx=widgets.IntSlider(min=0, max=10, value=0, step=1),\n",
-    "                    vis_idx = widgets.IntSlider(min=-1, max=100, value=-1, step=1)) #visprob_srcids = [1669,1801,2815,3776,4338,6137,]\n",
+    "                    vis_idx = widgets.IntSlider(min=-1, max=100, value=-1, step=1)) #visprob_srcids = [1669,1801,2815,3776,4338,6137,] tt_srcs[\"rg_src_id\"]\n",
     "\n",
     "controls = widgets.HBox(widget.children[:-1], layout = widgets.Layout(flex_flow='row wrap'))\n",
     "output = widget.children[-1]\n",
