Coadd integration continued
Former-commit-id: 1da714536e59598c284eb7b0e7a1ccdb577dded1

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -5,14 +5,41 @@
    "id": "c0fd65f4-8d6a-45e8-96b6-a972fe024459",
    "metadata": {},
    "source": [
-    "# Visualize light curves for all the sources of a region and skymaps of its fields "
+    "# Inspect source light curves and skymaps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ba66aa5-9d87-4681-a429-74b92c9bfeee",
+   "metadata": {},
+   "source": [
+    "### Setup main notebook options"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d73f0bca-43f4-4d59-91b3-c07bdbf960fe",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "region_name = \"TDS_ELAISN1\" #_ELAISN1\n",
+    "sort_par = \"rg_src_id\" # \"flux\" \n",
+    "only_sel_srcs = True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a47713fa-f128-425f-a2d0-754e64ffb654",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
@@ -32,16 +59,10 @@
     "\n",
     "from vasca.utils import mag2flux\n",
     "\n",
-    "# ------------------  Setup region and plotting paramters  ----------------------\n",
-    "\n",
-    "region_name = \"TDS_ELAISN1\" #_ELAISN1\n",
+    "#Setup some global setup parameters that usually don't need to be adjusted\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
-    "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\"]\n",
-    "show_map_pars = [\"rg_src_id\",\"ra\",\"dec\",\"pos_err\",\"pos_nxv\", \"pos_cpval\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\", \"nr_fd_srcs\"]\n",
-    "sort_par = \"rg_src_id\" # \"flux\" #\"rg_src_id\" #\n",
-    "only_sel_srcs = False\n",
-    "\n",
-    "# -------------------------------------------------------------------------------\n",
+    "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\",\"assoc_ffactor\",\"assoc_fdiff_s2n\"]\n",
+    "show_map_pars = [\"rg_src_id\",\"ra\",\"dec\",\"pos_err\",\"pos_nxv\", \"pos_cpval\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\", \"nr_fd_srcs\",\"assoc_ffactor\",\"assoc_fdiff_s2n\"]\n",
     "\n",
     "#Load region\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\".fits\"\n",
@@ -68,17 +89,21 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "c038cd88-42e8-4897-a277-bbf207f4c930",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1b76d2f8bee439c9a5b28f97c5a5d1d",
+       "model_id": "205f2fdb75404777ad85946753eb7f01",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(414, 508, 867, 1192, 1254, 1260, 1334…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(25, 346, 478, 515, 635, 744, 750, 103…"
       ]
      },
      "metadata": {},
@@ -152,15 +177,23 @@
     "    display(fd_src.tt_detections[fd_src.tt_detections[\"fd_src_id\"]==fd_src_id])\n",
     "    \n",
     "\n",
-    "srcs_assoc = [414,508,867,1192,1254,1260,1334,1916,2050,3576,3721,3836,4307,4854,5561,5702,6772]   \n",
+    "srcs_assoc = [1932,2849,8407,9443,35193]\n",
     "    \n",
-    "widget = widgets.interactive( plot_sky_src, rg_src_id=srcs_assoc,\n",
+    "widget = widgets.interactive( plot_sky_src, rg_src_id=tt_srcs[\"rg_src_id\"],\n",
     "                    fd_idx=widgets.IntSlider(min=0, max=10, value=0, step=1),\n",
-    "                    vis_idx = widgets.IntSlider(min=-1, max=100, value=-1, step=1)) #visprob_srcids = [1669,1801,2815,3776,4338,6137,] tt_srcs[\"rg_src_id\"]\n",
+    "                    vis_idx = widgets.IntSlider(min=-1, max=100, value=-1, step=1)) #visprob_srcids = [1669,1801,2815,3776,4338,6137,] \n",
     "\n",
     "controls = widgets.HBox(widget.children[:-1], layout = widgets.Layout(flex_flow='row wrap'))\n",
     "output = widget.children[-1]\n",
     "display(widgets.VBox([controls, output]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b65aa26f-ae0b-44c7-86f7-e22da3a9e976",
+   "metadata": {},
+   "source": [
+    "6213\t244.39756945883389\t55.14934913850557  periodic"
    ]
   },
   {
@@ -175,7 +208,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "aaa5317e-41b7-47fe-9dca-29ae84bc127b",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -220,7 +257,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "b4b6f33c-ac4d-4467-a780-804bee76b0dd",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -254,7 +295,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "40b02103-e651-4c98-bd2f-24461ed03f7e",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": []
   }
