Readjusted coadd cuts and fixed pytests
Former-commit-id: 438755e1cb6c176e7fad5f1b6ccaa638e61c12a0

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -18,26 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d73f0bca-43f4-4d59-91b3-c07bdbf960fe",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "region_name = \"TDS_ELAISN1\" #_ELAISN1\n",
+    "region_name = \"TDS_ELAISN1\" # _ELAISN1\n",
     "sort_par = \"rg_src_id\" # \"flux\" \n",
-    "only_sel_srcs = True"
+    "only_sel_srcs = False\n",
+    "srcs_ids = [] #[ 1932,  2017,  2018,  2849,  3839,  4300,  4665,  5239,  6173, 6217,  7125,  8407,  9443,  9710, 13543, 14042, 16926, 18771, 19305, 19909, 19986, 27586, 28065, 30891, 30911, 31661, 33963,34725, 35193, 35636]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a47713fa-f128-425f-a2d0-754e64ffb654",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -62,7 +60,7 @@
     "#Setup some global setup parameters that usually don't need to be adjusted\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\",\"assoc_ffactor\",\"assoc_fdiff_s2n\"]\n",
-    "show_map_pars = [\"rg_src_id\",\"ra\",\"dec\",\"pos_err\",\"pos_nxv\", \"pos_cpval\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\", \"nr_fd_srcs\",\"assoc_ffactor\",\"assoc_fdiff_s2n\"]\n",
+    "show_map_pars = [\"rg_src_id\",\"ra\",\"dec\",\"pos_err\",\"pos_nxv\", \"pos_cpval\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\", \"nr_fd_srcs\",\"assoc_ffactor\",\"assoc_fdiff_s2n\",\"sel\"]\n",
     "\n",
     "#Load region\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\".fits\"\n",
@@ -87,23 +85,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c038cd88-42e8-4897-a277-bbf207f4c930",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "205f2fdb75404777ad85946753eb7f01",
+       "model_id": "cb7e3d0b0706495cab4d5891b72b4117",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(25, 346, 478, 515, 635, 744, 750, 103…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11,…"
       ]
      },
      "metadata": {},
@@ -111,7 +107,6 @@
     }
    ],
    "source": [
-    "\n",
     "def plot_sky_src(rg_src_id=0, fd_idx=0, vis_idx = -1):\n",
     "    \n",
     "    #Check if src_id exists\n",
@@ -131,8 +126,6 @@
     "    if vis_idx > len(fd_src.tt_visits)-1:\n",
     "        print(\"Visit index out of range\") \n",
     "        return\n",
-    "    \n",
-    "    \n",
     "\n",
     "    fig_src = plt.figure(\"Sky map source\",figsize=(8, 7))\n",
     "    #plt.cla()\n",
@@ -176,10 +169,12 @@
     "    print(\"\\nDetections in this field:\")\n",
     "    display(fd_src.tt_detections[fd_src.tt_detections[\"fd_src_id\"]==fd_src_id])\n",
     "    \n",
-    "\n",
-    "srcs_assoc = [1932,2849,8407,9443,35193]\n",
-    "    \n",
-    "widget = widgets.interactive( plot_sky_src, rg_src_id=tt_srcs[\"rg_src_id\"],\n",
+    "#Decide which sources to show\n",
+    "list_srcs = tt_srcs[\"rg_src_id\"]\n",
+    "if len(srcs_ids)>0:\n",
+    "    list_srcs = srcs_ids\n",
+    "     \n",
+    "widget = widgets.interactive( plot_sky_src, rg_src_id=list_srcs,\n",
     "                    fd_idx=widgets.IntSlider(min=0, max=10, value=0, step=1),\n",
     "                    vis_idx = widgets.IntSlider(min=-1, max=100, value=-1, step=1)) #visprob_srcids = [1669,1801,2815,3776,4338,6137,] \n",
     "\n",
@@ -193,6 +188,7 @@
    "id": "b65aa26f-ae0b-44c7-86f7-e22da3a9e976",
    "metadata": {},
    "source": [
+    "### Sources to look into\n",
     "6213\t244.39756945883389\t55.14934913850557  periodic"
    ]
   },
