Added fuv filter to analyis
Former-commit-id: 3aff576a192e23dbbd5a97fb8bd0c99c40ed0221

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "region_name = \"TDS_ELAISN1\" # _ELAISN1\n",
     "sort_par = \"rg_src_id\" # \"flux\" \n",
-    "only_sel_srcs = False\n",
+    "only_sel_srcs = True\n",
     "srcs_ids = [] #[ 1932,  2017,  2018,  2849,  3839,  4300,  4665,  5239,  6173, 6217,  7125,  8407,  9443,  9710, 13543, 14042, 16926, 18771, 19305, 19909, 19986, 27586, 28065, 30891, 30911, 31661, 33963,34725, 35193, 35636]"
    ]
   },
@@ -94,12 +94,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb7e3d0b0706495cab4d5891b72b4117",
+       "model_id": "52addcd10b4f4d279864564c70471d30",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11,…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(16, 186, 814, 827, 1608, 3482), value…"
       ]
      },
      "metadata": {},
@@ -202,18 +202,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "aaa5317e-41b7-47fe-9dca-29ae84bc127b",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98d6b848eb2a4e94a6166ce4f7002841",
+       "model_id": "4212b4cc664343fca2a80de3c5c8f931",
        "version_major": 2,
        "version_minor": 0
       },
