Updated statistics calculation for filter vector entries
Former-commit-id: c86597e91e95bca30b8dd3d4ae6491bb50c70532

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -60,7 +60,7 @@
     "#Setup some global setup parameters that usually don't need to be adjusted\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\",\"assoc_ffactor\",\"assoc_fdiff_s2n\"]\n",
-    "show_map_pars = [\"rg_src_id\",\"ra\",\"dec\",\"pos_err\",\"pos_nxv\", \"pos_cpval\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\", \"nr_fd_srcs\",\"assoc_ffactor\",\"assoc_fdiff_s2n\",\"sel\"]\n",
+    "show_map_pars = [\"rg_src_id\",\"filter_id\",\"ra\",\"dec\",\"pos_err\",\"pos_nxv\", \"pos_cpval\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\", \"nr_fd_srcs\",\"assoc_ffactor\",\"assoc_fdiff_s2n\",\"sel\"]\n",
     "\n",
     "#Load region\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\".fits\"\n",
@@ -85,6 +85,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "365e7fd0-44d7-43a8-91f1-f1518330b9ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from astropy.table import Table\n",
+    "tt = Table()\n",
+    "tt[\"test\"]=[[1,2],[3,4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "c038cd88-42e8-4897-a277-bbf207f4c930",
    "metadata": {
@@ -94,12 +106,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52addcd10b4f4d279864564c70471d30",
+       "model_id": "5b0f72b752ea48da973c7b7e281a3fcd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(16, 186, 814, 827, 1608, 3482), value…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(9, 10, 18, 29, 37, 41, 45, 64, 69, 72…"
       ]
      },
      "metadata": {},
