Added filter plotting options
Former-commit-id: 57cd86acf92dbb36b381c39dea0d0922ec9044bf

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -59,8 +59,8 @@
     "\n",
     "#Setup some global setup parameters that usually don't need to be adjusted\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
-    "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\",\"assoc_ffactor\",\"assoc_fdiff_s2n\"]\n",
-    "show_map_pars = [\"rg_src_id\",\"filter_id\",\"ra\",\"dec\",\"pos_err\",\"pos_nxv\", \"pos_cpval\",\"nr_det\",\"flux\",\"mag\",\"flux_cpval\", \"nr_fd_srcs\",\"assoc_ffactor\",\"assoc_fdiff_s2n\",\"sel\"]\n",
+    "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\",\"assoc_ffactor\",\"assoc_fdiff_s2n\"]\n",
+    "show_map_pars = [\"rg_src_id\",\"obs_filter_id\",\"ra\",\"dec\",\"pos_err\",\"pos_nxv\", \"pos_cpval\",\"nr_det\",\"flux\",\"flux_cpval\", \"nr_fd_srcs\",\"assoc_ffactor\",\"assoc_fdiff_s2n\",\"sel\"]\n",
     "\n",
     "#Load region\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\".fits\"\n",
@@ -72,7 +72,8 @@
     "    tt_srcs = rg.tt_sources[rg.tt_sources[\"sel\"]]\n",
     "nr_srcs = len(tt_srcs)\n",
     "tt_srcs.sort(sort_par)\n",
-    "tt_srcs.add_index(\"rg_src_id\")"
+    "tt_srcs.add_index(\"rg_src_id\")\n",
+    "#display(tt_srcs)"
    ]
   },
   {
@@ -81,18 +82,6 @@
    "metadata": {},
    "source": [
     "### Show all info for one source"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "365e7fd0-44d7-43a8-91f1-f1518330b9ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from astropy.table import Table\n",
-    "tt = Table()\n",
-    "tt[\"test\"]=[[1,2],[3,4]]"
    ]
   },
   {
@@ -106,12 +95,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b0f72b752ea48da973c7b7e281a3fcd",
+       "model_id": "d4525430fe83425386556913205e6e6f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(9, 10, 18, 29, 37, 41, 45, 64, 69, 72…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(0, 5, 6, 8, 9, 10, 11, 12, 16, 17, 18…"
       ]
      },
      "metadata": {},
@@ -173,13 +162,14 @@
     "        display(tc_src.tt_coadd_sources[\"coadd_src_id\",\"flux\",\"flux_err\",\"mag\",\"nr_det\"])\n",
     "    print(\"\\nFields this source was detected in:\")\n",
     "    display(tc_src.tt_fields)\n",
-    "    #display(tc_src.tt_detections)\n",
-    "    \n",
-    "    #get fd_src_id\n",
-    "    sel_fd_src = (rg.tt_src_id_map[\"rg_src_id\"]==rg_src_id) * (rg.tt_src_id_map[\"rg_fd_id\"]==rg_fd_id)\n",
-    "    fd_src_id = rg.tt_src_id_map[sel_fd_src][\"fd_src_id\"][0]\n",
-    "    print(\"\\nDetections in this field:\")\n",
-    "    display(fd_src.tt_detections[fd_src.tt_detections[\"fd_src_id\"]==fd_src_id])\n",
+    "    print(\"\\nDetections:\")\n",
+    "    display(tc_src.tt_detections)\n",
+    "\n",
+    "# Display sources only for the shown field\n",
+    "#        sel_fd_src = (rg.tt_src_id_map[\"rg_src_id\"]==rg_src_id) * (rg.tt_src_id_map[\"rg_fd_id\"]==rg_fd_id)\n",
+    "#        fd_src_id = rg.tt_src_id_map[sel_fd_src][\"fd_src_id\"][0]\n",
+    "#        print(\"\\nDetections in this field:\")\n",
+    "#        display(fd_src.tt_detections[fd_src.tt_detections[\"fd_src_id\"]==fd_src_id])\n",
     "    \n",
     "#Decide which sources to show\n",
     "list_srcs = tt_srcs[\"rg_src_id\"]\n",
@@ -261,23 +251,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b4b6f33c-ac4d-4467-a780-804bee76b0dd",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf6cbeea853443c3a28d9ea84f03703a",
+       "model_id": "84d432f5477b4c0ba4c267bdd0bef3fc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=8, description='block_nr', max=16), Output()), _dom_classes=('widget-int…"
+       "interactive(children=(IntSlider(value=158, description='block_nr', max=316), Output()), _dom_classes=('widget-…"
       ]
      },
      "metadata": {},
@@ -301,11 +287,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "40b02103-e651-4c98-bd2f-24461ed03f7e",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
