Fixes issues when running just one filter
Former-commit-id: 2e1590668473eab71b9f343816a332a978fb9aa2

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -95,12 +95,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "246a1568c76147988405413056852f47",
+       "model_id": "bee268ca491745ecb3d9a2c070d787d7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(0, 5, 6, 8, 9, 10, 11, 12, 16, 17, 18…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(386, 502, 524, 544, 681, 693, 861, 93…"
       ]
      },
      "metadata": {},
@@ -159,7 +159,7 @@
     "    \n",
     "    display(tc_src.tt_sources[show_map_pars])\n",
     "    if \"tt_coadd_sources\" in tc_src._table_names:\n",
-    "        display(tc_src.tt_coadd_sources[\"coadd_src_id\",\"flux\",\"flux_err\",\"mag\",\"nr_det\"])\n",
+    "        display(tc_src.tt_coadd_sources[\"coadd_src_id\",\"flux\",\"flux_err\",\"nr_det\"])\n",
     "    print(\"\\nFields this source was detected in:\")\n",
     "    display(tc_src.tt_fields)\n",
     "    print(\"\\nDetections:\")\n",
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "aaa5317e-41b7-47fe-9dca-29ae84bc127b",
    "metadata": {
     "tags": []
@@ -213,12 +213,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4212b4cc664343fca2a80de3c5c8f931",
+       "model_id": "ad6bdaec2a104b699345d76314a89330",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='rg_fd_id', max=1), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=0, description='rg_fd_id', max=0), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "metadata": {},
@@ -258,12 +258,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d5e312eb2e44d4aa1d774e338892188",
+       "model_id": "47cc5ed450064c9499720ace72b0f841",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=158, description='block_nr', max=316), Output()), _dom_classes=('widget-…"
+       "interactive(children=(IntSlider(value=4, description='block_nr', max=8), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "metadata": {},
